--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-checkbox": "~2.4.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "prop-types": "^15.8.1",
@@ -22,7 +24,10 @@
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-checkbox": "~2.4.0"
+    "@stripe/stripe-react-native": "0.28.0",
+    "expo-location": "~16.1.0",
+    "expo-image": "~1.3.4",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
