--- a/package.json
+++ b/package.json
@@ -13,24 +13,32 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.6.0",
     "expo": "~49.0.15",
     "expo-checkbox": "~2.4.0",
+    "expo-image": "~1.3.4",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "@stripe/stripe-react-native": "0.28.0",
-    "expo-location": "~16.1.0",
-    "expo-image": "~1.3.4",
-    "react-native-maps": "1.7.1"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
