--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
@@ -18,15 +20,19 @@
     "expo": "~49.0.15",
     "expo-checkbox": "~2.4.0",
     "expo-image": "~1.3.4",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
+    "expo-speech": "~11.3.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-progress": "^5.0.1",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
