--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-checkbox": "~2.4.0",
     "expo-image": "~1.3.4",
     "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-speech": "~11.3.0",
     "expo-status-bar": "~1.6.0",
@@ -29,13 +30,16 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-progress": "^5.0.1",
     "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-camera": "~13.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
